Build shaded cli jars. Add ex authors, sanctioning authors to Name class